2008-01-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate.c (print_3dtable):  Prevent possible segfault from
	attempt to initialize vector tail pointer in a plot that contains
	no vectors.

	* src/graphics.c (plot_image_or_update_axes):  Do not clip 3D image data
	against Z range if the plot mode is "set view map".

	* demo/heatmaps.dem demo/4D_data.dem demo/all.dem demo/html/index.save
	demo/html/Makefile: Replace the 4D_data demo script with a more general
	demonstration of 2D and 3D heat maps.

2008-01-16  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* share/Makefile.am (Gnuplot): Fix rule to allow builds outside
	the source tree.

2008-01-15  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Rework the inheritance of color and stroke properties
	applied to points. This allows the Firefox svg engine to handle our
	point styles.

2008-01-13  Allin Cottrell  <cottrell@wfu.edu>

	* src/term_api.h src/term.c term/emf.trm term/PostScript/8859-9.ps
	term/post.trm docs/gnuplot.doc:   Add encoding option for Microsoft
	Codepage 1254 (Turkish).  This is the same as latin5 (iso8859-9) except
	that it also assigns characters to code points x80 - x9F.

2008-01-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (prune_dataticks) src/setshow.h: New routine to purge any
	axis tick labels left over from 'using xtics(n)' option during previous
	plot command.  Manually entered tick labels are kept.
	Bug #1850588

	* plot2d.c (plotrequest): Call prune_dataticks() before each new plot.

	* src/pm3d.c (pm3d_plot): When color information is given in a separate
	column, we must not use the interpolated z coordinate for color.
	Bug #1783405

2008-01-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (replot_command): Fix for replot with unknown terminal.

2008-01-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm (PS_encode_image): Fix for maxcolors in "plot with
	image".
